--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       display: flex;
       flex-direction: column;
       background-color: #efeae2;
-      background-image: url('https://i.imgur.com/2qGT5WZ.png');
+      background-image: url('file:///C:/Users/Acer/Downloads/fundowhats.jpg');
       padding-bottom: 70px; /* Altura da input-area + padding */
     }
 
